Salon activity is almost done

--- a/app/src/main/res/layout/master_activity.xml
+++ b/app/src/main/res/layout/master_activity.xml
@@ -225,7 +225,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="sans-serif-medium"
-                            android:text="@string/visit_options" />
+                            android:text="@string/salon_visiting" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
