--- a/app/src/main/res/layout/review.xml
+++ b/app/src/main/res/layout/review.xml
@@ -18,6 +18,7 @@
     <TextView
         android:id="@+id/reviewDate"
         style="@style/Caption"
+        android:textColor="@color/textColorSecondary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/master_review_date_margin_top"
