--- a/app/src/main/res/layout/suitable_master.xml
+++ b/app/src/main/res/layout/suitable_master.xml
@@ -26,12 +26,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/master_suitable_master_name_margin_start"
+        android:fontFamily="sans-serif-medium"
         app:layout_constraintLeft_toRightOf="@id/avatar"
         app:layout_constraintTop_toTopOf="@id/avatar" />
 
     <TextView
         android:id="@+id/role"
         style="@style/Body1"
+        android:textColor="@color/textColorSecondary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/master_suitable_master_space_between_name_and_role"
@@ -43,6 +45,7 @@
         style="@style/Body2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-medium"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/name" />
 
@@ -51,22 +54,37 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/master_suitable_master_about_margin_top"
+        android:drawableEnd="@drawable/ic_keyboard_arrow_right_primary_color_24dp"
         android:fontFamily="sans-serif-medium"
+        android:gravity="center_vertical"
         android:text="@string/about_master"
         android:textColor="@color/colorPrimary"
         app:layout_constraintRight_toRightOf="@id/price"
         app:layout_constraintTop_toTopOf="@id/role" />
 
-    <!-- Stars -->
-    <TextView
-        android:id="@+id/rating"
-        style="@style/Body2"
+
+    <!-- Rating -->
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/master_suitable_master_rating_margin_top"
-        android:drawablePadding="@dimen/master_suitable_master_drawable_star_padding"
-        android:drawableStart="@drawable/ic_star_border_black_24dp"
         android:gravity="center_vertical"
         app:layout_constraintLeft_toLeftOf="@id/name"
-        app:layout_constraintTop_toBottomOf="@id/role" />
+        app:layout_constraintTop_toBottomOf="@id/role"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:id="@+id/starsContainer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" />
+
+        <TextView
+            android:id="@+id/ratesCount"
+            style="@style/Caption"
+            android:textColor="@color/textColorSecondary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
