--- a/app/src/main/res/values/salon_activity_dimens.xml
+++ b/app/src/main/res/values/salon_activity_dimens.xml
@@ -49,6 +49,7 @@
     <dimen name="salon_activity_suitable_master_avatar_size">40dp</dimen>
     <dimen name="salon_activity_suitable_master_avatar_margin_start">16dp</dimen>
     <dimen name="salon_activity_suitable_master_name_margin_start">12dp</dimen>
+    <dimen name="salon_activity_suitable_master_name_margin_end">12dp</dimen>
     <dimen name="salon_activity_suitable_master_space_between_name_and_role">0dp</dimen>
     <dimen name="salon_activity_suitable_master_rating_margin_top">8dp</dimen>
     <dimen name="salon_activity_suitable_master_space_between_stars">2dp</dimen>
