--- a/app/src/main/res/layout/salon_activity.xml
+++ b/app/src/main/res/layout/salon_activity.xml
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <!-- Photos -->
+            <!-- Photos TODO app:layout_constraintDimensionRatio="16:9" as alternative -->
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/imageSliderContainer"
                 android:layout_width="match_parent"
@@ -77,14 +77,21 @@
                     android:layout_marginTop="@dimen/salon_activity_title_margin_top"
                     android:orientation="vertical">
 
-                    <RelativeLayout
+                    <android.support.constraint.ConstraintLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="wrap_content">
 
                         <TextView
                             android:id="@+id/title"
                             style="@style/Title"
-                            android:layout_width="wrap_content"
+                            android:ellipsize="end"
+                            android:maxLines="1"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            android:layout_width="0dp"
+                            app:layout_constraintWidth_default="wrap"
+                            app:layout_constraintHorizontal_bias="0"
+                            app:layout_constraintEnd_toStartOf="@id/aboutSalon"
                             android:layout_height="wrap_content"
                             android:textStyle="bold" />
 
@@ -93,13 +100,13 @@
                             style="@style/Caption"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_alignBaseline="@id/title"
-                            android:layout_alignParentEnd="true"
+                            app:layout_constraintBaseline_toBaselineOf="@id/title"
+                            app:layout_constraintEnd_toEndOf="parent"
                             android:drawableEnd="@drawable/ic_keyboard_arrow_right_primary_color_24dp"
                             android:gravity="center_vertical"
                             android:text="@string/about_salon"
                             android:textColor="@color/colorPrimary" />
-                    </RelativeLayout>
+                    </android.support.constraint.ConstraintLayout>
 
                     <!-- Rating -->
                     <LinearLayout
@@ -163,26 +170,36 @@
                     <TextView
                         android:id="@+id/addressMetro"
                         style="@style/Body2"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
+                        android:maxLines="1"
                         android:layout_height="wrap_content"
-                        app:layout_constraintLeft_toLeftOf="parent"
+                        android:ellipsize="end"
+                        app:layout_constraintWidth_default="wrap"
+                        app:layout_constraintHorizontal_bias="0"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/map_icon"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
                         android:id="@+id/addressDescription"
+                        app:layout_constraintHorizontal_bias="0"
                         style="@style/Body1"
-                        android:layout_width="wrap_content"
+                        android:maxLines="1"
+                        app:layout_constraintEnd_toStartOf="@id/map_icon"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        app:layout_constraintWidth_default="wrap"
                         android:layout_marginTop="@dimen/salon_activity_address_description_margin_top"
-                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/addressMetro" />
 
                     <ImageView
+                        android:id="@+id/map_icon"
                         android:layout_width="@dimen/salon_activity_icon_map_size"
                         android:layout_height="@dimen/salon_activity_icon_map_size"
                         android:src="@drawable/map"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         tools:ignore="contentDescription" />
                 </android.support.constraint.ConstraintLayout>
@@ -310,7 +327,7 @@
         <View
             android:id="@+id/appointmentDivider"
             style="@style/Divider"
-            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -320,7 +337,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/salon_activity_make_an_appointment_price_margin_start"
             android:layout_marginTop="@dimen/salon_activity_make_an_appointment_price_margin_top"
-            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/appointmentDivider" />
 
         <TextView
@@ -332,17 +349,23 @@
             android:drawablePadding="@dimen/salon_activity_make_an_appointment_duration_drawable_padding"
             android:drawableStart="@drawable/ic_time"
             android:fontFamily="sans-serif-medium"
-            app:layout_constraintLeft_toRightOf="@id/appointmentPrice"
+            app:layout_constraintStart_toEndOf="@id/appointmentPrice"
             app:layout_constraintTop_toTopOf="@id/appointmentPrice" />
 
         <TextView
             android:id="@+id/appointmentMasterDescription"
             style="@style/Body1"
-            android:layout_width="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintWidth_default="wrap"
+            android:textColor="@color/textColorSecondary"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/salon_activity_make_an_appointment_master_description_margin_top"
-            app:layout_constraintLeft_toLeftOf="@id/appointmentPrice"
-            app:layout_constraintTop_toBottomOf="@id/appointmentPrice" />
+            app:layout_constraintStart_toStartOf="@id/appointmentPrice"
+            app:layout_constraintTop_toBottomOf="@id/appointmentPrice"
+            app:layout_constraintEnd_toStartOf="@id/makeAnAppointmentBtn" />
 
         <!-- Yes, it's strange -->
         <android.support.v4.widget.Space
@@ -362,7 +385,7 @@
             android:paddingTop="@dimen/salon_activity_make_an_appointment_button_vertical_padding"
             android:text="@string/make_an_appointment"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
 
@@ -387,7 +410,7 @@
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:paddingBottom="@dimen/services_header_margin_bottom"
             android:text="@string/services"
-            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
@@ -396,8 +419,8 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:background="?attr/selectableItemBackgroundBorderless"
-            android:src="@drawable/ic_close_black_24dp"
-            app:layout_constraintRight_toRightOf="parent"
+            android:srcCompat="@drawable/ic_close_black_24dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/servicesHeadline"
             tools:ignore="contentDescription" />
 
