--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,10 @@
 <resources>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="photo_counter_on_image_slider_radius">16dp</dimen>
+    <dimen name="photo_counter_on_image_slider_margin">16dp</dimen>
+    <dimen name="photo_counter_on_image_slider_padding_vertical">8dp</dimen>
+    <dimen name="photo_counter_on_image_slider_padding_horizontal">12dp</dimen>
+    <dimen name="photo_counter_on_image_slider_drawable_padding">8dp</dimen>
 </resources>
