--- a/app/src/main/res/layout/salon_activity.xml
+++ b/app/src/main/res/layout/salon_activity.xml
@@ -171,20 +171,25 @@
                         android:id="@+id/addressMetro"
                         style="@style/Body2"
                         android:layout_width="0dp"
-                        android:maxLines="1"
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
-                        app:layout_constraintWidth_default="wrap"
+                        android:maxLines="1"
+                        android:textStyle="bold"
+                        android:drawableLeft="@drawable/metro_circle"
+                        android:drawablePadding="@dimen/salon_activity_address_metro_circle_padding"
+                        app:layout_constraintEnd_toStartOf="@id/map_icon"
                         app:layout_constraintHorizontal_bias="0"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toStartOf="@id/map_icon"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintWidth_default="wrap"
+                        tools:ignore="RtlHardcoded" />
 
                     <TextView
                         android:id="@+id/addressDescription"
                         app:layout_constraintHorizontal_bias="0"
                         style="@style/Body1"
                         android:maxLines="1"
+                        android:textColor="@color/textColorSecondary"
                         app:layout_constraintEnd_toStartOf="@id/map_icon"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
